# socless_repo_parser

./: .gitignore  README.md  main.py  mock_test.json  pyproject.toml  requirements.txt  setup.py  test.json
socless_repo_parser/: __init__.py  api.py  builders.py  constants.py  github.py  helpers.py  main.py  models.py  parse_python.py  parse_yml.py
src/: constants.py  github.py  main.py  models.py  parse_python.py  parse_yml.py
tests/: conftest.py  test_api.py  test_builders.py  test_main.py  test_models.py  test_parse_python.py  test_parse_yml.py
tests/mock_files/: expected_local_output.json  mock_lambda.py  mock_lambda_with_nested_handle_state.py  mock_output.json  mock_serverless.yml
tests/mock_files/mock_socless_repo/: README.md  package.json  pyproject.toml  rename.py  serverless.yml
tests/mock_files/mock_socless_repo/common_files/: template_helpers.py
tests/mock_files/mock_socless_repo/functions/: requirements.txt
tests/mock_files/mock_socless_repo/functions/function_not_in_sls_yml/: lambda_function.py
tests/mock_files/mock_socless_repo/functions/function_one/: lambda_function.py
tests/mock_files/mock_socless_repo/functions/function_two/: lambda_function.py
tests/mock_files/mock_socless_repo/functions/send_old_timey_telegram/: lambda_function.py
tests/mock_files/mock_socless_repo/playbooks/socless_template_integration_test/: playbook.json  test_case_json.txt
tests/mock_files/mock_socless_repo/tests/: test_common_files.py  test_send_old_timey_telegram.py
